# AIM

./: .gitignore  CMakeLists.txt  README.md
libs/glad/include/glad/: glad.h
libs/glad/src/: glad.c
shaders/: shader.fs  shader.vs
src/: Game.cpp  Game.h  Makefile  Shader.cpp  Shader.h  Window.cpp  Window.h  common.c  common.h  core.c  draw.c  gameplay.c  main.cpp  maps.c  parser.c  raygui.h  raylib_game.c  screen_ending.c  screen_gameplay.c  screen_logo.c  screen_options.c  screen_title.c  screens.h  settings.txt
src/resources/: LICENSE.txt
src/resources/maps/: FloatS1.map  FloatS2.map  FloatT1.map  FloatT2.map  Grid1.map  Grid2.map  Grid3.map  TEMPLATE.txt  Track1.map  Track2.map
src/resources/models/: gun.glb  shootingGallery.glb  shootingGallery.gltf  shootingGallery.mtl
